fix: 1. Delete some files and change routerlink to avatorview & homeview. 2. Set new utilities for container, spacing, color... 3. Add Unread Notification Badge for Member Icon.

--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,46 @@ body {
   background-color: #FAFBFF;
 }
 
-.color-575757 {
-  color: #575757;
-}
-
-.input-bg {
-  background-color: #F5F7FA;
-}
-
 input[type="search"]:focus {
   outline: none;
+}
+
+.comment-icon::before {
+  content: '1';
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #FF4F4F;
+  position: absolute;
+  z-index: 99;
+  top: 4px;
+  right: 4px;
+}
+
+.bell-icon::before {
+  content: '1';
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #FF4F4F;
+  position: absolute;
+  z-index: 99;
+  top: 4px;
+  right: 4px;
+}
+
+ul.comment-user li:not(:last-child) {
+  margin-right: -4px;
 }
 
 /* clears the ‘X’ from Chrome */
